# OS

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  OS-export.md  README-p.md  README.md  SECURITY.md  main.asm  omni_integration.asm
AntiAnalysis/: DebuggerDetect.asm  DebuggerTrap.asm  MalbolgeGatekeeper.c  MalbolgeGatekeeper.mbg  MalbolgeLoader.c  VMDetector.hs
Bootstrap/: Entry.asm  EntryPoint.asm  StageLoader.c  StageLoader.hs
CompilerInfection/: BootstrapInfection.hs
CoreEngine/: CodeMutator.asm  EntropyHarvester.hs  MetamorphicLinker.hs  PolymorphicEngine.hs
Evasion/: DebuggerDetect.asm  SandboxEscape.c  VMDetector.c
Examplen_of_bypasses/: Bypass_sample-1.asm  Bypass_sample-2.asm
Network/: RCE.hs
NuclearHaskellWorm/: Main.hs
Persistence/: AntiRemoval.hs  BootInfection.hs  Rootkit.hs
Runtime/: ExecutionTracer.hs  SelfModify.asm  SelfModify.x64.asm  SyscallObfuscator.asm  TelemetryMonitor.c
Utilities/: Encryption.hs  MemoryHacks.hs
config/: kernel_config.h  security.cfg
controller/: command_server.py
core/: CryptoEngine.c  EntropyHarvester.asm  EntropyHarvester.c  MalbolgeExecutor.c  MetamorphicMutator.asm  PolymorphEngine.asm  PolymorphicEngine.hs  SelfRewrite.hs  ai_controller.c  ai_evasion.asm  arm64_support.asm  backdoor.c  bootkit.asm  bootstrap.asm  communication.asm  cpu_control.asm  crypto.c  crypto_annihilate.asm  crypto_bypass.c  debugger_detection.asm  destroyer.c  destruct.asm  dkom.asm  dma_manager.asm  driver_exploit.asm  ebpf_dynamic.asm  (+53 more)
haskell/: blackout.cabal  stack.yaml
haskell/src/Blackout/: Neural.hs  Protocol.hs
(+200 files in other folders)
